--- a/blogs_index.html
+++ b/blogs_index.html
@@ -62,6 +62,10 @@ title: Jiarui Fang - publications
 <h5>古体诗集</h5>
 <ul>
 <li><p>
+  2017年08月
+  <a href="./assets/blogs/peom-2017-08-18-autumn.html">[秋雨后作]</a>
+</p></li>
+<li><p>
   2015年09月
   <a href="./assets/blogs/peom-201509-FP.html">[发配充军]</a>
 </p></li>
