--- a/assets/blogs/2017-07-09-gyqy.html
+++ b/assets/blogs/2017-07-09-gyqy.html
@@ -16,7 +16,7 @@ title: Jiarui Fang
 1. 为何是中航工业研发出国产大飞机C919？为何其内部存在种种效率低下的弊病，却也没有私有企业研究机构参与竞争？
 </h5>
 <p>
-回答有关国有科研机构的问题，要首先从其依托的国有企业谈起。国企是什么？国有企业属于人民，国家代表全体人民行使国有资产产权。因此盈利不是国有企业的主要目的（国家可以通过税收来弄钱），其主要任务是完成承担政府的社会的责任。比如石油，电力，通讯这些行业，其工作是提供能源和服务，盈利是次要的，先保证国家稳定的能源、电力、通讯的供应是首要的，这是人民生活的基本。为了完成这个目标，国有企业委托-代理结构是国家委托地方政府或有关部门（国资委）行使对国有企业监管责任，国有企业的治理通过通过任命或聘用,委托经理人员经营国有企业，通过银行贷款缴税或干脆对企业实行统收统支的方式获得资产收入。
+回答有关国有科研机构的问题，要首先从其依托的国有企业谈起。国企是什么？国有企业属于人民，国家代表全体人民行使国有资产产权。因此盈利不是国有企业的主要目的（国家可以通过税收来弄钱），其主要任务是完成承担政府的社会的责任。比如石油，电力，通讯这些行业，其工作是提供能源和服务，盈利是次要的，先保证国家稳定的能源、电力、通讯的供应是首要的，这是人民生活的基本。为了完成这个目标，国有企业委托-代理结构是国家委托地方政府或有关部门（国资委）行使对国有企业监管责任，国有企业的治理通过任命或聘用,委托经理人员经营国有企业，通过银行贷款缴税或干脆对企业实行统收统支的方式获得资产收入。
 </p>
 <p>
 国有内部弊病的病灶是什么？中航工业航天科技作为军口性质国企，都存在军事国防目的的政策性负担，因此属于特殊法人企业，由政府全额出资并明确其法人地位，由国家通过专门的法规和政策来规范，不受公司法规范。因为其经营权（属于厂长，经理）和产权（属于被国家代表的人民）分离，所有者和经营者利益不一致，责任不对等。在不充分竞争市场中，这两点治权和产权矛盾，其容易滋生基层组织官僚习气严重、企业经理人员缺乏改善企业经营状况的动力和难以调动职工积极性等现象。利益不一致，责任不对等只是表象，其根源在于市场不存在充分市场竞争。尽管治权产权分离现象在任何现代公司都存在，但是根据根据林毅夫的分析，委托-代理结构下产生的种种问题可以在充分市场竞争中得以解决。具体做法就是通过市场利润来评价经营者经营状况，加之因地制宜的内部管理手段，委托人可以有效了解控制企业情况。而由于政府财政政策资源等等方面保护，中航工业和航天科技不需要和其他私有企业在相同条件下进行竞争，因此其内部种种弊病无法根除。
@@ -48,6 +48,6 @@ title: Jiarui Fang
 5. 国企未来如何？
 </h5>
 <p>
-这届大Boss曾经讲话要理直气壮做大做强国有企业。国企为定海神针，守土有责，保证公共服务质量。民营企业为竞争先锋，参与国际竞争。发展中国家，借助国企力量保证产业安全，如果民企接管会被外国取代或兼并。有利于执行国家意志，集中力量办大事。政治合法性需要国企保证，调动社会财富。国家战略规划需要国企执行。国有企业将是一带一路，雄安新区建设的急先锋，因此会有大量税收倒贴来做强国企。希望未来国企在人事任用，业绩考核等方面更加透明，再非国家核心利益方面可以适度退出，或者参与到充分竞争市场中提高自身效率，合理利用好国家资产。
+这届大Boss曾经讲话要理直气壮做大做强国有企业。国企为定海神针，守土有责，保证公共服务质量。民营企业为竞争先锋，参与国际竞争。发展中国家，借助国企力量保证产业安全，如果民企接管会被外国取代或兼并。有利于执行国家意志，集中力量办大事。政治合法性需要国企保证，调动社会财富。国家战略规划需要国企执行。国有企业将是一带一路，雄安新区建设的急先锋，因此会有大量税收倒贴来做强国企。希望未来国企在人事任用，业绩考核等方面更加透明，在非国家核心利益方面可以适度退出，或者参与到充分竞争市场中提高自身效率，合理利用好国家资产。
 </p>
 
