make some modifications

--- a/assets/blogs/2017-07-09-sjbbb.html
+++ b/assets/blogs/2017-07-09-sjbbb.html
@@ -15,6 +15,6 @@ title: Jiarui Fang
 父亲是聪明人，可是聪明反被聪明误。他以辽中县状元身份考入南开大学化学系，大学期间浪子班头，是学校风云人物。毕业后分配到某国有化工研究研究院，因其才大志疏，又不善办公室政治，一辈子在单位做着高不成低不就的职位。父亲在大学的时候曾经对他的好朋友说，自己的最大愿望是做一个研究所的所长，因为种种原因，他没能完成这个愿望。父亲是很早接触计算机的，曾经高分考过微软的软件工程师认证，还给人培训数据库挣钱，不过他没有在互联网浪潮下成为马化腾一样的人物，甚至连互联网最初浪潮的一粒水珠都没有沾到，只是在原单位做过一段时间信息部门的工作。父亲的二十岁之后的人生十分平庸不温不火，几乎没有他成为状元一刻那样闪耀的时候。我想他大部分时候他是有些落寞的，当传销还没有成为人尽皆知的骗术时候，父亲被一位朋友忽悠，曾投入很大热情研究利用其发财的可能性，不过后来这件事他绝口不提了。
 </p>
 <p>
-从小到大，父亲一直是我的榜样，是我最敬佩的人。父亲善于计划，做事井井有条，精于调研，看问题深刻精准，这些能力是我所无法企及的。父亲一直对我要求不高，很少给我压力。他并没有像《摔跤吧！爸爸》里面一样，理想夭折之后把自己的夙愿寄托在子辈之上。相反他以自身经历做参考，认为上名牌大学并没有多大好处，对我的学业从不苛责，对我的现状也很满意，丝毫强迫我更上一层楼的意愿。
+从小到大，父亲一直是我的榜样，是我最敬佩的人。父亲善于计划，做事井井有条，精于调研，看问题深刻精准，这些能力是我所无法企及的。父亲一直对我要求不高，很少给我压力。他并没有像《摔跤吧！爸爸》里面一样，理想夭折之后把自己的夙愿寄托在子辈之上。相反他以自身经历做参考，认为上名牌大学并没有多大好处，对我的学业从不苛责，对我的现状也很满意，丝毫没有强迫我更上一层楼的意愿。
 我想父亲把我送到大学校门的时候，正如电影里的阿米尔汗把吉塔送到体育学校那一刻心情是相似的：不再年轻的父亲把我们送到大千世界的门口，脱离他的掌控，满心期待我们能够超过年少的自己，亦喜亦悲。
 </p>
