--- a/assets/blogs/2017-07-09-sjbbb.html
+++ b/assets/blogs/2017-07-09-sjbbb.html
@@ -9,12 +9,12 @@ title: Jiarui Fang
 今天晚上看了久负盛名的印度电影《摔跤吧！爸爸》，真后悔自己没有去电影院，可以躲在黑暗中安安静静地哭一场。电影让我想起了我的父亲。
 </p>
 <p>
-在我初中的时候，父亲热心于对我进行功课辅导。初中有一段时间，我的周末上午会被父亲管教，做英语习题，练习听力，但我多囫囵了事，并未培养起对英语之兴趣。初二那年，父亲亲自辅导我物理化学，想当时他大概满心期望我可以成才。填报高中志愿时候，为人节俭甚至有些吝啬的父亲还是出了三万元供我择校重点高中，可是怪我不争气，分数只够沈阳市的一所普通高中。父亲丝毫没有流露出责怪的我浪费三万块钱的意思，出分第二天，父亲跟我说，你晚上说梦话都是跟分数有关，还真有些可怜我。高中时候，父亲不再辅导我课程，但也并没有让我去过任何补习班，即使妈妈找到了最好学校的老师补课的机会，也被父亲否决了。高中前两年半，我的成绩也一直不是很突出，想必那是父亲对我也无太大期望，上一所一般的一本大学毕业学习一门工程技术专业，进一个待遇不错的国有企业，他大概也就满足了。最后半年，我的成绩突飞猛进，最后如父亲所愿考入了北京邮电大学，正如他的规划，也许我毕业在家乡的中国移动过上他期待的小富即安的日子。我高中时候，即使我在班里成绩是一二名，父亲总是告诉别人我成绩一般不甚优秀。我记得有一次买菜，买菜阿姨问我学习怎样，父亲回答“很一般”，我当时还有些气愤。高考出分后，曾经有位同事称赞他“虎父无犬子”，父亲却乐开了花，让人一眼看出。大学报到时候，是父亲带我做一晚卧铺到达北京的，又和我做学校的大巴来到偏远的昌平校区，为我铺好床，带我吃完饭，自己又搭上回程的巴士离开。告别父亲回去的路上，我竟泪如雨下。大学四年，我的成绩越来越好，也曾萌生过出国读研的想法，我无比用心地准备了GRE考试，考试当天父亲借出差之际陪我在考场边酒店住了一晚，考完试请我吃了顿烤肉就又匆匆离开了。后来，我并没有出国，选择了申请清北的研究生，父亲在家鞍前马后，帮我搜集了好多资料。毕业那天，又是父亲帮我打理了行李，陪我做了一晚火车回到沈阳。博士报到那天，父亲又带我来到北京，给我在综体前面拍了几张照片，吃了食堂做晚餐，又去匆匆赶地铁去火车站。当时北京刚刚下过雨，天气有些阴郁，不过父亲似乎很开心，他说自己属蛇，以前每当阴雨天考试就超常发挥，我也是他的作品，因此我的博士一定会读得很顺利。当时，我正被人嘲笑，选择不太容易的读博之路，正因为毕业标准忧心忡忡，父亲的话给我我一丝安慰。我读博之后，父亲也离开了有机会经常出差的岗位，再也没有来北京看过我。博士二年级时候，我第四篇论文侥幸被录取，父亲特别高兴还作诗一首庆贺我达到毕业要求。
+在我初中的时候，父亲热心于对我进行功课辅导。有一段时间，我的周末上午会被父亲管教，做英语习题，练习听力，但我多囫囵了事，并未培养起对英语之兴趣。初二那年，父亲亲自辅导我物理化学，想当时他大概满心期望我可以成才。高中时候，父亲不再辅导我课程，但也并没有让我去过任何补习班，即使妈妈找到了最好学校的老师补课的机会，也被父亲否决了。高中前两年半，我的成绩也一直不是很突出，想必那时父亲对我也无太大期望，上一所一般的一本大学毕业学习一门工程技术专业，进一个待遇不错的国有企业，他大概也就满足了。最后半年，我的成绩突飞猛进，最后如父亲所愿考入了北京邮电大学，正如他的规划，也许我毕业在家乡的中国移动过上他期待的小富即安的日子。我高中时候，即使我在班里成绩是一二名，父亲总是告诉别人我成绩一般不甚优秀。我记得有一次买菜，买菜阿姨问我学习怎样，父亲回答“很一般”，我当时还有些气愤。高考出分后，曾经有位同事称赞他“虎父无犬子”，父亲却乐开了花，让人一眼看出。大学报到时候，是父亲带我做一晚卧铺到达北京的，又和我做学校的大巴来到偏远的昌平校区，为我铺好床，带我吃好饭，自己又搭上回程的巴士离开。告别父亲回去的路上，我竟泪如雨下。大学四年，我的成绩越来越好，也曾萌生过出国读研的想法，我无比用心地准备了GRE考试，考试当天父亲特意借出差之际陪我在考场边酒店住了一晚，考完试请我吃了顿烤肉就又匆匆离开了。后来，我并没有出国，选择了申请清北的研究生，父亲在家鞍前马后，帮我搜集了好多资料。毕业那天，又是父亲帮我打理了行李，陪我做了一晚火车回到沈阳。暑假过去了，到了博士报到的时候。又是父亲带我来到清华，给我在综体前面拍了几张照片，吃了食堂做晚餐后，又去匆匆赶地铁去火车站。当时北京刚刚下过雨，天气有些阴郁，不过父亲似乎很开心，他说自己属蛇，以前每当阴雨天考试就超常发挥，既然我也是他的作品，那我的博士一定会读得很顺利。当时，我正被人嘲笑，选择不太容易的读博之路，正因为毕业标准忧心忡忡，父亲的话给我我一丝安慰。我读博之后，父亲也离开了经常出差的岗位，再也没有来北京看过我。博士二年级时候，我第四篇论文侥幸被录取，父亲特别高兴，还作诗一首庆贺我达到毕业要求。
 </p>
 <p>
-父亲是聪明人，可是聪明反被聪明误。他以辽中县状元身份考入南开大学化学系，大学期间浪子班头，是学校风云人物。毕业后分配到某国有化工研究研究院，因其才大志疏，又不善办公室政治，一辈子在单位做着高不成低不就的职位。父亲在大学的时候曾经对他的好朋友说，自己的最大愿望是做一个研究所的所长，因为种种原因，他没能完成这个愿望。父亲是很早接触计算机的，曾经高分考过微软的软件工程师认证，还给人培训数据库挣钱，不过他没有在互联网浪潮下成为马化腾一样的人物，甚至连互联网最初浪潮的一粒水珠都没有沾到，只是在原单位做过一段时间信息部门的工作。父亲的二十岁之后的人生十分平庸不温不火，几乎没有他成为状元一刻那样闪耀的时候。我想他大部分时候他是有些落寞的，当传销还没有成为人尽皆知的骗术时候，父亲被一位朋友忽悠，曾投入很大热情研究利用其发财的可能性，不过后来这件事他绝口不提了。
+父亲是聪明人，可是聪明反被聪明误。他以辽中县状元身份考入南开大学化学系，大学期间浪子班头，因为一次打架被剥夺了奖学金资格后，便不问学习。我看到过他毕业留言簿，同学对他的能力有很高的评价。父亲毕业后分配到某国有化工研究研究院，因其才大志疏，又不善办公室政治，一辈子在单位做着高不成低不就的职位。父亲在大学的时候曾经对他的好朋友说，自己的最大愿望是做一个研究所的所长，因为种种原因，他没能完成这个愿望。父亲是很早接触计算机的，曾经高分考过微软的软件工程师认证，还给人培训数据库挣钱，不过他没有在互联网浪潮下成为马化腾一样的人物，甚至连互联网最初浪潮的一粒水珠都没有沾到，只是在原单位领导一段时间信息部门的工作。父亲的二十岁之后的人生十分平庸不温不火，几乎没有他成为状元一刻那样闪耀的时候。
 </p>
 <p>
-从小到大，父亲一直是我的榜样，是我最敬佩的人。父亲善于计划，做事井井有条，精于调研，看问题深刻精准，这些能力是我所无法企及的。父亲一直对我要求不高，很少给我压力。他并没有像《摔跤吧！爸爸》里面一样，理想夭折之后把自己的夙愿寄托在子辈之上。相反他以自身经历做参考，认为上名牌大学并没有多大好处，对我的学业从不苛责，对我的现状也很满意，丝毫没有强迫我更上一层楼的意愿。
-我想父亲把我送到大学校门的时候，正如电影里的阿米尔汗把吉塔送到体育学校那一刻心情是相似的：不再年轻的父亲把我们送到大千世界的门口，脱离他的掌控，满心期待我们能够超过年少的自己，亦喜亦悲。
+父亲善于计划，做事井井有条，精于调研，思维敏捷，所以从小到大，父亲一直是我的榜样。上大学后，我才发现前十八年来，我一直在有意无意的在模仿父亲。父亲一直对我要求不高，很少给我压力。他并没有像《摔跤吧！爸爸》里面一样，理想夭折之后把自己的夙愿寄托在子辈之上。相反他以自身经历做参考，认为上名牌大学并没有多大好处，对我的学业从不苛责，对我的现状也很满意，丝毫没有强迫我更上一层楼的意愿。
+我想父亲把我送到大学校门的时候，和电影里的阿米尔汗把吉塔送到体育学校那一刻心情是相似的：不再年轻的父亲把我们送到大千世界的门口，脱离他的掌控，满心期待我们能够超过年少的自己，亦喜亦悲。
 </p>
