--- a/assets/blogs/travel-201606.html
+++ b/assets/blogs/travel-201606.html
@@ -12,14 +12,14 @@ title: Jiarui Fang
 阿里会友
 </h3>
 <p>
-     杭州首站，下了高铁便直奔阿里西溪园区，杭州的交通情况实在不敢恭维。周五的十点半也是一路堵车。恰好在午饭时间赶到阿里，和程航吃饭，交流了一下同学们的近况。犹记是两年前的6月25号离校，适逢差一日毕业两周年。我发现，当年自己敬佩看好之同学，如今仍在在找工作竞争中略胜一筹。看来，人与人差距在大学四年已经基本定型，研究生逆袭的情况我还很少见。
+     杭州首站，下了高铁便直奔阿里西溪园区，杭州的交通情况实在不敢恭维。周五的十点半也是一路堵车。恰好在午饭时间赶到阿里，和朋友吃饭，交流了一下同学们的近况。犹记是两年前的6月25号离校，适逢差一日毕业两周年。
      阿里的园区建筑都很前卫，共七幢高楼。食堂，咖啡馆，便利店，健身房一应俱全。在阿里园区，看见中午集体去吃饭的人群，熟悉的男女比例和巨大的地下自行车库，仿佛置身于某工科大学。大叔口述，他所在的部门早九晚九，天天加班如常，即使有家室者亦然，深感阿里似乎并没有传说说的那么人性。阿里的一脸苦逼上班者的塑像似乎很能反应员工心声。在园区正门边，有升降式停车库，里面很多豪车，可见园区应该有不少高层股东。
 </p>
 <h3>
 初识西湖
 </h3>
 <p>
-     看罢阿里，打车去断桥残雪，因为自断桥可向西游览西湖诸名胜。此桥并非断成两截，只是在雪后此桥若隐若现得名断桥残雪。过了断桥便是白堤，下午因为预报有雨，但是迟迟未下，所以西子湖以淡妆示人，可以看见远处山外青山，对岸楼外楼阁，清风拂面，让人心旷神怡。白堤中有一小岛，岛上有“孤山寺北贾亭西，书面初平云脚底”的为孤山。孤山周围曾是清帝康熙乾隆下江南的行宫。但是，宫殿楼阁已经毁于太平兵祸。山前小院曾是御花园一脚，内有亭台书西湖天下景。在孤山周围可以找到不少小景雅趣。有梅妻鹤子的林逋隐居处和墓碑，还有日本友人仰慕其的诗刻。革命志士陈其美戎马军装的雕像，像前介绍其为革命奔走呼号最后成仁取义的一生，陈自诩扶颠持危，事业争光日月；成仁取义，俯仰无愧天下。女中豪杰秋瑾烈士墓，墓前有楹联赞“巾帼拜英雄 求仁得仁又何怨 亭台悲风雨 虽死不死终自由”。因为时间仓促，没有时间参观白苏二公祠，因为正在修葺，也无缘一睹西冷印社芳容。沿西冷桥出白堤，竟然见到了武松墓和苏小小墓的坟茔，都是今人为增添西湖人文氛围而矫造的。在苏堤北桥少歇，本来准备沿苏堤之下，步行两三公里到我的住处。忽逢大雨，雨若跳珠入湖，也体验了一回东坡居士“还来一醉西湖雨，不见跳珠十五年”中念念不忘的雨中西湖。 躲在周边商店屋檐下避雨，我的伞却只能开无法关，遂在商店购置一把天堂伞。寻见附近的小杨生煎，吃了生煎包和牛肉汤。饭后，雨已经停了，因为手机电量不多，加之担心雨会再来，在岳王庙口打车去酒店。此时正吃晚饭，出租车多以交车为由拒载，好在还可以用打车软件可以方便叫车。车子在湖东山路中穿梭，道路两侧林荫环盖，十分幽静。我定的万凯旅馆坐落在山脚下，白墙黑瓦，好似山间别墅一般。到了旅店之后，雨便又继续狂下，本来计划领略西湖夜色，因为雨夜无月加之体力不支，自己稍作洗漱后便早早睡下。
+     看罢阿里，打车去断桥残雪，因为自断桥可向西游览西湖诸名胜。此桥并非断成两截，只是在雪后此桥若隐若现得名断桥残雪。过了断桥便是白堤，下午因为预报有雨，但是迟迟未下，所以西子湖以淡妆示人，可以看见远处山外青山，对岸楼外楼阁，清风拂面，让人心旷神怡。白堤中有一小岛，岛上有“孤山寺北贾亭西，书面初平云脚底”的为孤山。孤山周围曾是清帝康熙乾隆下江南的行宫。但是，宫殿楼阁已经毁于太平兵祸。山前小院曾是御花园一脚，内有亭台，上书“西湖天下景”。在孤山周围可以找到不少小景雅趣。有梅妻鹤子的林逋隐居处和墓碑，还有日本友人仰慕其的诗刻。革命志士陈其美戎马军装的雕像，像前有介绍他为革命奔走呼号最后成仁取义的一生，陈自诩为“扶颠持危，事业争光日月；成仁取义，俯仰无愧天下”。也有女中豪杰秋瑾烈士墓，墓前有楹联赞“巾帼拜英雄 求仁得仁又何怨 亭台悲风雨 虽死不死终自由”。因为时间仓促，没有时间参观白苏二公祠，因为正在修葺，也无缘一睹西冷印社芳容。沿西冷桥出白堤，竟然见到了武松墓和苏小小墓的坟茔，都是今人为增添西湖人文氛围而矫造的。在苏堤北桥少歇，本来准备沿苏堤之下，步行两三公里到我的住处。忽逢大雨，雨若跳珠入湖，也体验了一回东坡居士“还来一醉西湖雨，不见跳珠十五年”中念念不忘的雨中西湖。 躲在周边商店屋檐下避雨，我的伞却只能开无法关，遂在商店购置一把天堂伞。寻见附近的小杨生煎，吃了生煎包和牛肉汤。饭后，雨已经停了，因为手机电量不多，加之担心雨会再来，在岳王庙口打车去酒店。此时正吃晚饭，出租车多以交车为由拒载，好在还可以用打车软件可以方便叫车。车子在湖东山路中穿梭，道路两侧林荫环盖，十分幽静。我定的万凯旅馆坐落在山脚下，白墙黑瓦，好似山间别墅一般。到了旅店之后，雨便又继续狂下，本来计划领略西湖夜色，因为雨夜无月加之体力不支，自己稍作洗漱后便早早睡下。
 </p>
 
 <h3>
@@ -60,7 +60,7 @@ title: Jiarui Fang
 </h3>
 
 <p>
-     逛过岳王庙，我做公交去浙江大学玉泉校区参观。我每到一个地点，有去当地著名大学参观的爱好。一是我还是学生，总向看看其他地方同龄人的生活状态。二是这些大学多是有深厚历史底蕴，有些建筑也很有时代感。三是，大学里多美女，可以让我们这种常年不见桃花的程序员一饱眼福。浙大玉泉校区在一座小山下，可能是因为下雨，校园内并不见多少人。园内种着和北京高校一样的大杨树，两侧数目连在一起将道路遮盖。我在浙大电机系的系馆避雨休息，看见六七个本科生在照毕业相，男男女女拍照十分热闹。两年前整，自己离开本科母校，如今却身处江南烟雨中，想想自己这两年，虽然没有什么丰功伟绩，但是小打小闹，自己过得还算满意。看着这些即将面临读研，出国，工作的孩子，心里默默为他们祝福，希望他们活出自己的精彩人生。浙大校园逛腻了之后，我又坐车去湖滨公园。湖滨公园就是东西湖湖畔。在这里看到了著名的音乐喷泉。在沿路的树上有许多松鼠，是分开，人们给他们喂食也不怕。我还看到了，志愿军纪念碑和参加淞沪抗战八十八师阵亡将士纪念碑，为中华民族流血牺牲的人，都应该在中国人心灵坐标中有自己的一席之地。天色已晚，我从柳岸闻莺处告别西湖，告别杭州，踏上了地铁前往杭州东站返锡。
+     逛过岳王庙，我做公交去浙江大学玉泉校区参观。我每到一个地点，有去当地著名大学参观的爱好。一是我还是学生，总向看看其他地方同龄人的生活状态。二是这些大学多是有深厚历史底蕴，有些建筑也很有时代感浙大玉泉校区在一座小山下，可能是因为下雨，校园内并不见多少人。园内种着和北京高校一样的大杨树，两侧数目连在一起将道路遮盖。我在浙大电机系的系馆避雨休息，看见六七个本科生在照毕业相，男男女女拍照十分热闹。两年前整，自己离开本科母校，如今却身处江南烟雨中，想想自己这两年，虽然没有什么丰功伟绩，但是小打小闹，自己过得还算满意。看着这些即将面临读研，出国，工作的孩子，心里默默为他们祝福，希望他们活出自己的精彩人生。浙大校园逛腻了之后，我又坐车去湖滨公园。湖滨公园就是东西湖湖畔。在这里看到了著名的音乐喷泉。在沿路的树上有许多松鼠，是分开，人们给他们喂食也不怕。我还看到了，志愿军纪念碑和参加淞沪抗战八十八师阵亡将士纪念碑，为中华民族流血牺牲的人，都应该在中国人心灵坐标中有自己的一席之地。天色已晚，我从柳岸闻莺处告别西湖，告别杭州，踏上了地铁前往杭州东站返锡。
 </p>
 
 <h3>
