--- a/blogs_index.html
+++ b/blogs_index.html
@@ -4,6 +4,7 @@ title: Jiarui Fang - publications
 ---
 
 <h3>独知斋文集</h3>
+独知斋，是我在太湖畔居住公寓一间房。书斋名为“独知斋”，是取“君子慎独”和“知耻后勇”之意。独居幽室，长有所思。只言片语，多有谬误，望读者海涵。
 
 <h5>游记</h5>
 <ul>
@@ -26,7 +27,7 @@ title: Jiarui Fang - publications
 </ul>
 
 
-<h5>读书笔记</h5>
+<h5>读书</h5>
 <ul>
 <li><p>
   2017年7月
@@ -43,7 +44,7 @@ title: Jiarui Fang - publications
 <li><p>
 </ul>
 
-<h5>观影笔记</h5>
+<h5>观影</h5>
 <ul>
 <li><p>
   2017年7月
@@ -52,7 +53,7 @@ title: Jiarui Fang - publications
 </ul>
 
 
-<h5>古体诗集</h5>
+<h5>诗</h5>
 <ul>
 <li><p>
   2017年08月
@@ -64,7 +65,7 @@ title: Jiarui Fang - publications
 </p></li>
 </ul>
 
-<h5>酬酢迎送</h5>
+<h5>酬酢</h5>
 <ul>
 <li><p>
   <a href="./assets/blogs/couplets.html">[对联]</a>
