--- a/index.html
+++ b/index.html
@@ -2,74 +2,21 @@
 layout: default
 title: Jiarui Fang
 ---
-<div>
-  <!-- Do I want to show a pic on the phone screen?-->
-  <div class = "rightphoto">
-    <img src="assets/img/fangjiaruiv3.jpeg" alt="photo" width="200px"/>
-  </div>
-    
-  <div class = "leftpad">
-    <h3>
-      Jiarui Fang	
-    	(方佳瑞<a href="http://en.wikipedia.org/wiki/Chinese_character"><i class="icon-question-sign"></i></a>)
-    </h3>
-    <h5>
-    <a href="mailto:fang_jiarui@163.com">fang_jiarui AT 163 dot com</a>
-    </h5>  
-    <p>
-    I am currently a Ph.D. candidate at Department of Computer Science of TsingHua University, advised by Prof. Guangwen Yang and Prof. Haohuan Fu.
-    </p>
-    <p>
-    I was born in Shenyang City, which located in the north-east of China. I went to Beijing in 2010 and obtained my B.S. in Computer Science at Beijing University of Posts and Telecommunications. Since 2014, I have been a PH.D candidate in Tsinghua University.
-    <p>
-    <p>
-    I like reading books. My essays and book reviews can be referred in my blogs.
-    <p>
-
-  </div>
-
+<div><!-- Do I want to show a pic on the phone screen?-->
+<div class="rightphoto"><img src="assets/img/fangjiaruiv3.jpeg" alt="photo" width="200px" /></div>
+<div class="leftpad">
+<h3>Jiarui Fang (方佳瑞)</h3>
+<h5><a href="mailto:fang_jiarui@163.com">fang_jiarui AT 163 dot com</a></h5>
+<p>I am currently a senior engineer at Wechat AI, Tencent in Beijing. 
+  I received a Ph.D.in Computer Science from Tsinghua University (2019). 
+  During my Ph.D., my research focused on High-Performance Computing, Parallel Computing, Performance issue in Deep Learning Applications. 
+  I worked as a research scientist at the National Supercomputing Center in Wuxi from April 2016 to May 2019.
+  I was a visiting scholar at UC Davis from August 2018 to August 2019.</p>
 </div>
-
-
-<!--
- *** Research ***
--->
-<div>
-<h3>
-	<a name='research'></a> Research 
-</h3>
-<p>
-  My current research topics include:
-  <ul>
-      <li> Distributed Deep Learning Framework Design </br>
-      <li> High Performance Computing </br>
-      <li> Heterogeneous Accelerator Applications
-  </ul>
-</p>
 </div>
-
-
-<!--
- *** Publications ***
--->
-
-
-<!-- <p> (Most recent publications to be added) </p> -->
-<h3>
-  <a name='publications'></a> Academic Publications 
-</h3>
-
-  <!-- Links to: <a href="publications.html">[Full List]</a> -->
-  <!-- <a href="http://scholar.google.com/citations?user=mu5Y2rYAAAAJ&hl=en" target="_blank">[Google Scholar]</a> -->
-
-{% include pub_highlight.html %}
-
-
-
-
-
+<p>&nbsp;</p>
 <!--<a href="projects.html"> [Unpublished Projects]</a>-->
-
+<p>&nbsp;&nbsp;</p>
 <!--
  *** Software ***
 
@@ -78,9 +25,7 @@ title: Jiarui Fang
 </h3>
 
 {% include software.html %}
--->
-
-<!--
+--><!--
  *** Teaching ***
 
 <h3>
