--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -2,16 +2,19 @@
 layout: post
 title: Jiarui Fang - publications
 ---
-<h4>1. Distributedd Deep Learning System on GPU cluster</h4>
+<h4>1. High Performance Deep Learning System on GPU cluster</h4>
 
 <div class="media">
-  <a class="pull-left" href="#">
+  <!-- <a class="pull-left" href="#">
     <img class="media-object" src="assets/img/swcaffelogo.png" width="96px" height="96px"/>
-  </a>
+  </a> -->
   <div class="media-body">
     <p class="media-heading">
-      <strong>SWCaffe: A Deep Learning Framework for the Sunway TaihuLight</strong><br/>Jiarui Fang<br />
-      <a href="assets/pdf/swcaffe.pdf">[Technical Report PDF]</a>
+      <i><strong>RedSync: Reducing synchronization bandwidth for distributed deep learning training system</strong></i><br />
+      RedSync: Reducing synchronization bandwidth for distributed deep learning training system,
+      Fang Jiarui, Fu Haohuan, Yang Guangwen, Hsieh Cho-Jui,
+      Journal of Parallel and Distributed Computing 133 (JPDC), 30-39
+      <a href="https://arxiv.org/pdf/1808.04357.pdf">[PDF]</a>
     </p>
     <!-- <p class="abstract-text">
     
@@ -24,23 +27,25 @@ title: Jiarui Fang - publications
   <div class="media-body">
     <p class="media-heading">
       <strong><i>swATOP: Automatically Optimizing Deep Learning Operators on SW26010 Many-Core Processor.</i></strong><br />
-      Wei Gao*, Jiarui Fang*, Wenlai Zhao, Jinzhe Yang, Long Wang, Lin Gan, Haohuan Fu, Guangwen Yang. (* equal contribution), 
+      Wei Gao*, Jiarui Fang*, Wenlai Zhao, Jinzhe Yang, Long Wang, Lin Gan, Haohuan Fu, Guangwen Yang. (*equal contribution), 
       swATOP: Automatically Optimizing Deep Learning Operators on SW26010 Many-Core Processor,
-      Proceedings of the 48th International Conference on Parallel Processing (ICPP), 2019.<br />
+      Proceedings of the 48th International Conference on Parallel Processing (ICPP 2019).<br />
       <a href="https://fangjiarui.github.io/assets/pdf/ICPP2019.pdf">[PDF]</a>
     </p>
     <p class="media-heading">
       <strong><i>swCaffe: a Parallel Framework for Accelerating Deep Learning Applications on Sunway TaihuLight</i></strong><br />
       Jiarui Fang*, and Li, Liandeng* and Fu, Haohuan and Jiang, Jinlei and Zhao, Wenlai and He, Conghui and You, Xin and Yang, Guangwen. (* equal contribution), 
-      IEEE Cluster (Cluster), Belfast, UK, 2018.<br />
+      IEEE Cluster (Cluster 2018), Belfast, UK, 2018.<br />
       <a href="https://arxiv.org/abs/1903.06934">[PDF]</a>
+      <a href="https://github.com/feifeibear/SWCaffe">[Software]</a>
+
     </p>
     <p class="media-heading">
       <strong>swDNN: A Library for Accelerating Deep Learning Applications on Sunway TaihuLight Supercomputer</strong><br />
      Jiarui Fang, Haohuan Fu, et al., 31st IEEE International Parallel & Distributed Processing Symposium (IPDPS 2017), 2017.6<br />
       <a href="assets/pdf/swdnn-ipdps-2017.pdf">[PDF]</a>
       <a href="assets/pdf/swDNN-IPDPS-final-ppt.pdf">[PPT]</a>
-      <a href="assets/pdf/optimiza-CNN.pdf">[Journal PDF]</a>
+
       <a href="https://github.com/THUHPGC/swDNN">[Software]</a>
     </p>
     <!-- <p class="abstract-text">
@@ -56,18 +61,18 @@ title: Jiarui Fang - publications
   </a> -->
   <div class="media-body">
     <p class="media-heading">
-      <strong>Cache-friendly Design for Complex Spatially-variable Coeffcient Stencils on Many-core Architectures</strong><br />
+      <i><strong>Cache-friendly Design for Complex Spatially-variable Coeffcient Stencils on Many-core Architectures</strong></i><br />
       Jiarui Fang, Haohuan Fu and Guangwen Yang. IEEE 23rd International Conference on High Performance Computing, Data, and Analytics (HiPC 2016), 2016.12
       <a href="assets/pdf/HiPC2016-finial-submit.pdf">[PDF]</a>
     </p>
     <p class="media-heading">
-      <strong>Optimizing Complex Spatially-Variant Coe cient Stencils for Seismic Modeling on GPU.</strong><br />
-      Jiarui Fang, Haohuan Fu, He Zhang, et al. IEEE 21st International Conference on Parallel and Distributed Systems(ICPADS),
+      <i></i><strong>Optimizing Complex Spatially-Variant Coe cient Stencils for Seismic Modeling on GPU.</strong></i><br />
+      Jiarui Fang, Haohuan Fu, He Zhang, et al. IEEE 21st International Conference on Parallel and Distributed Systems(ICPADS 2015),
       <a href="assets/pdf/ICPADSfinial128.pdf">[PDF]</a>
     </p>
     <p class="media-heading">
-      <strong>GPU-based explicit time evolution method.</strong><br />
-      Jiarui Fang, Haohuan Fu, Guangwen Yang, et al The 84th Society of Exploration Geophysicists Technical Program Expanded Abstracts, 2015.10
+      <i><strong>GPU-based explicit time evolution method.</strong></i>i><br />
+      Jiarui Fang, Haohuan Fu, Guangwen Yang, et al The 84th Society of Exploration Geophysicists Technical Program Expanded Abstracts (SEG 2014),
       <a href="assets/pdf/ETE_GPU_finial.pdf">[PDF]</a>
     </p>
     <!-- <p class="abstract-text">
