--- a/blogs_index.html
+++ b/blogs_index.html
@@ -9,6 +9,14 @@ title: Jiarui Fang - publications
 <h5>游记</h5>
 <ul>
 <li><p>
+  2019年5月
+  <a href="./assets/blogs/travel-2019-05-龙兔日本游.html">[令和伊始日本游]</a>
+</p></li>
+<li><p>
+    2019年5月
+    <a href="./assets/blogs/life-2019-japan-impression.html">[日本观感]</a>
+  </p></li>
+<li><p>
   2017年6月
   <a href="./assets/blogs/travel-2017-07-09-orlando.html">[奥兰多游记]</a>
 </p></li>
@@ -52,6 +60,17 @@ title: Jiarui Fang - publications
 </p></li>
 </ul>
 
+<h5>生活</h5>
+<ul>
+<li><p>
+  2018年03月
+  <a href="./assets/blogs/life-201903.html">[听民谣-郭源潮]</a>
+</p></li>
+<li><p>
+  2018年02月
+  <a href="./assets/blogs/life-2018-02-做菜.html">[做菜入门有感]</a>
+</p></li>
+</ul>
 
 <h5>诗</h5>
 <ul>
