--- a/research.html
+++ b/research.html
@@ -1,38 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Jiarui Fang</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Le styles -->
-    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../assets/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="../../assets/css/yangqing.css" rel="stylesheet">
-  </head>
-
-  <body>
-
-    <div class="container">
-      <div class="row">
-        <div class="span3 bs-docs-sidebar">
-          <!-- We use a fancy nav bar if there is enough space -->
-          <hr class="hidden-phone"/>
-          <ul class="nav nav-list bs-docs-sidenav hidden-phone">
-            <li><a href="../../index.html"><i class="icon-play"></i>Home</a></li>
-            <li><a href="../../blogs_index.html"><i class="icon-play"></i>Blogs</a></li>
-            <li><a href="../../assets/pdf/CV-jiarui-fang.pdf"><i class="icon-play"></i>Curriculum Vitae</a></li>
-            <li><a href="../../pub_highlight.html"><i class="icon-play"></i>Research</a></li>
-          </ul>
-          <div class="visible-phone">
-            <a href="index.html"><i class="icon-play"></i>Home</a>
-            <a href="blogs_index.html"><i class="icon-play"></i>Blogs</a>
-            <a href="assets/pdf/CV.pdf"><i class="icon-play"></i>Curriculum Vitae</a>
-            <a href="pub_highlight.html"><i class="icon-play"></i>Research</a>
-          </div>
-        </div>
-        <div class="span9">
-          <h3>Introduction</h3>
+---
+layout: post
+title: Jiarui Fang - publications
+---
+<h3>Introduction</h3>
 During my 5 year Ph.D, I did some research work on HPC.
 
 <div class="media">
@@ -121,46 +91,3 @@ During my 5 year Ph.D, I did some research work on HPC.
       </p> 
     </div>
   </div> -->
-        </div>
-      </div>
-    </div>
-
-    <!-- Footer
-    ================================================== -->
-    <hr>
-    <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="span12">
-          <p>&copy; Jiarui Fang 2017</p>
-        </div>
-      </div>
-    </div>
-    </footer>
-
-
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-<!--
-    <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
-    <script src="assets/js/bootstrap-affix.js"></script>
-    <script src="assets/js/holder/holder.js"></script>
-    <script src="assets/js/application.js"></script>
--->
-  </body>
-</html>
