--- a/blogs_index.html
+++ b/blogs_index.html
@@ -50,6 +50,10 @@ title: Jiarui Fang - publications
   <a href="./assets/blogs/book-201702-BXJ.html">[碧血剑]</a>
 </p></li>
 <li><p>
+  2016年10月
+  <a href="./assets/blogs/book-2016-10-1984.html">[1984观感]</a>
+</p></li>
+<li><p>
 </ul>
 
 <h5>观影</h5>
