--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -2,6 +2,9 @@
 layout: post
 title: Jiarui Fang - publications
 ---
+
+<br /> 
+<br /> 
 <h4>1. High Performance Deep Learning System on GPU cluster</h4>
 
 <div class="media">
@@ -10,8 +13,14 @@ title: Jiarui Fang - publications
   </a> -->
   <div class="media-body">
     <p class="media-heading">
+      <i><strong>TurboTransformers: an efficient GPU serving system for transformer models</strong></i><br />
+      Fang Jiarui, Yu Yang, Zhao Chengduo, Zhou Jiem
+      Proceedings of the 26th ACM SIGPLAN Symposium on Principles and Practice of Parallel (PPoPP 2021), Virtual Event, Republic of Korea
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3437801.3441578">[PDF]</a>
+    </p>
+
+    <p class="media-heading">
       <i><strong>RedSync: Reducing synchronization bandwidth for distributed deep learning training system</strong></i><br />
-      RedSync: Reducing synchronization bandwidth for distributed deep learning training system,
       Fang Jiarui, Fu Haohuan, Yang Guangwen, Hsieh Cho-Jui,
       Journal of Parallel and Distributed Computing 133 (JPDC), 30-39
       <a href="https://arxiv.org/pdf/1808.04357.pdf">[PDF]</a>
@@ -41,8 +50,9 @@ title: Jiarui Fang - publications
 
     </p>
     <p class="media-heading">
-      <strong>swDNN: A Library for Accelerating Deep Learning Applications on Sunway TaihuLight Supercomputer</strong><br />
-     Jiarui Fang, Haohuan Fu, et al., 31st IEEE International Parallel & Distributed Processing Symposium (IPDPS 2017), 2017.6<br />
+      <strong><i>swDNN: A Library for Accelerating Deep Learning Applications on Sunway TaihuLight Supercomputer</i></strong><br />
+      Fang, Jiarui and Fu, Haohuan and Zhao, Wenlai and Chen, Bingwei and Zheng, Weijie and Yang, Guangwen, 
+      31st IEEE International Parallel & Distributed Processing Symposium (IPDPS 2017)<br />
       <a href="assets/pdf/swdnn-ipdps-2017.pdf">[PDF]</a>
       <a href="assets/pdf/swDNN-IPDPS-final-ppt.pdf">[PPT]</a>
 
@@ -66,7 +76,7 @@ title: Jiarui Fang - publications
       <a href="assets/pdf/HiPC2016-finial-submit.pdf">[PDF]</a>
     </p>
     <p class="media-heading">
-      <i></i><strong>Optimizing Complex Spatially-Variant Coe cient Stencils for Seismic Modeling on GPU.</strong></i><br />
+      <i><strong>Optimizing Complex Spatially-Variant Coe cient Stencils for Seismic Modeling on GPU.</strong></i><br />
       Jiarui Fang, Haohuan Fu, He Zhang, et al. IEEE 21st International Conference on Parallel and Distributed Systems(ICPADS 2015),
       <a href="assets/pdf/ICPADSfinial128.pdf">[PDF]</a>
     </p>
