upgrade CV-jiarui-fang

--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -13,8 +13,8 @@ title: Jiarui Fang - publications
   </a> -->
   <div class="media-body">
     <p class="media-heading">
-      <i><strong>TurboTransformers: an efficient GPU serving system for transformer models</strong></i><br />
-      Fang Jiarui, Yu Yang, Zhao Chengduo, Zhou Jiem
+      <i><strong>TurboTransformers: An Efficient GPU Serving System For Transformer Models</strong></i><br />
+      Fang Jiarui, Yu Yang, Zhao Chengduo, Zhou Jie,
       Proceedings of the 26th ACM SIGPLAN Symposium on Principles and Practice of Parallel (PPoPP 2021), Virtual Event, Republic of Korea
       <a href="https://dl.acm.org/doi/pdf/10.1145/3437801.3441578">[PDF]</a>
     </p>
