--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@ title: Jiarui Fang
 </p>
 <p>
   I received a Ph.D. in Computer Science from Tsinghua University at 2019.
-  During my Ph.D., my research focused on High-Performance Computing. 
+  My advisors are Prof. <a href="http://www.cs.tsinghua.edu.cn/publish/csen/4623/2010/20101224195554390212530/20101224195554390212530_.html">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>, my research focused on High-Performance Computing. 
   Two wonderful experiences outside campus enriched my Ph.D. study.
   I worked as a research scientist at the National Supercomputing Center in Wuxi from 2016 to 2019.
   I served as a visiting scholar under supervised of <a href="http://www.stat.ucdavis.edu/~chohsieh/">Cho-Jui Hsieh</a> at the University of California, Davis, from 2018 to 2019.
+</p>
+<p>
+  I enjoy sports. 
+  My hobbies include jogging, football, swimming, and table tennis. 
+  I am a billiards fan and I won the bronze medal in the WXG Beijing League 2020. 
+  I am also the organizer of a table football league in my office building.
 </p>
 </div>
 </div>
