--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ title: Jiarui Fang
 </p>
 <p>
   I received a Ph.D. in Computer Science from Tsinghua University at 2019.
-  My advisors are Prof. <a href="http://www.cs.tsinghua.edu.cn/publish/csen/4623/2010/20101224195554390212530/20101224195554390212530_.html">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>, my research focused on High-Performance Computing. 
+  My advisors are Prof. <a href="http://www.cs.tsinghua.edu.cn/publish/csen/4623/2010/20101224195554390212530/20101224195554390212530_.html">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>. 
+  My research focused on applying High-Performance Computing (HPC) for scientific applications. 
   Two wonderful experiences outside campus enriched my Ph.D. study.
   I worked as a research scientist at the National Supercomputing Center in Wuxi from 2016 to 2019.
   I served as a visiting scholar under supervised of <a href="http://www.stat.ucdavis.edu/~chohsieh/">Cho-Jui Hsieh</a> at the University of California, Davis, from 2018 to 2019.
