--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -81,7 +81,7 @@ title: Jiarui Fang - publications
       <a href="assets/pdf/ICPADSfinial128.pdf">[PDF]</a>
     </p>
     <p class="media-heading">
-      <i><strong>GPU-based explicit time evolution method.</strong></i>i><br />
+      <i><strong>GPU-based explicit time evolution method.</strong></i><br />
       Jiarui Fang, Haohuan Fu, Guangwen Yang, et al The 84th Society of Exploration Geophysicists Technical Program Expanded Abstracts (SEG 2014),
       <a href="assets/pdf/ETE_GPU_finial.pdf">[PDF]</a>
     </p>
