add visiting map.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@ title: Jiarui Fang
 <div class="leftpad">
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fang_jiarui@163.com">fang_jiarui AT 163 dot com</a></h5>
-<p>I am currently a senior engineer at Wechat AI, Tencent in Beijing.
-  My work includes development of the WeChat input method, the WeChat Open Diague Platform as well as the WeChat Translation System.
+<p>I am currently a senior engineer at Wechat AI, Tencent in Beijing. 
+  My work is focused on boosting efficiency of online and offline NLP tasks with cutting-edge parallel computing solutions.
+  I also took part in development of some basic modules in the WeChat App, including the WeChat Input Method and the WeChat Translation System.
   I am the author of <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU.
 </p>
 <p>
@@ -47,3 +48,7 @@ title: Jiarui Fang
 
 {% include teaching.html %}
 -->
+
+<body>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=IUauw8ewM48TcdV7vaC71gwnoW5ILE5GvL1ZyMOfBh0&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+</body>
