--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -17,6 +17,7 @@ title: Jiarui Fang - publications
       Fang Jiarui, Yu Yang, Zhao Chengduo, Zhou Jie,
       Proceedings of the 26th ACM SIGPLAN Symposium on Principles and Practice of Parallel (PPoPP 2021), Virtual Event, Republic of Korea
       <a href="https://dl.acm.org/doi/pdf/10.1145/3437801.3441578">[PDF]</a>
+      <a href="https://github.com/Tencent/TurboTransformers">[Software]</a>
     </p>
 
     <p class="media-heading">
@@ -64,7 +65,7 @@ title: Jiarui Fang - publications
   </div>
 </div>
 
-<h4>3. High Performance Geophysicists Applications</h4>
+<h4>3. High Performance Geophysics Applications</h4>
 <div class="media">
   <!-- <a class="pull-left" href="#">
     <img class="media-object" src="assets/img/hipclogo.png" width="96px" height="96px"/>
