polish research highlights

--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -14,7 +14,7 @@ title: Jiarui Fang - publications
   <div class="media-body">
     <p class="media-heading">
       <i><strong>TurboTransformers: An Efficient GPU Serving System For Transformer Models</strong></i><br />
-      Fang Jiarui, Yu Yang, Zhao Chengduo, Zhou Jie,
+      Jiarui Fang, Yang Yu, Chengduo Zhao, Jie Zhou,
       Proceedings of the 26th ACM SIGPLAN Symposium on Principles and Practice of Parallel (PPoPP 2021), Virtual Event, Republic of Korea
       <a href="https://dl.acm.org/doi/pdf/10.1145/3437801.3441578">[PDF]</a>
       <a href="https://github.com/Tencent/TurboTransformers">[Software]</a>
@@ -22,7 +22,7 @@ title: Jiarui Fang - publications
 
     <p class="media-heading">
       <i><strong>RedSync: Reducing synchronization bandwidth for distributed deep learning training system</strong></i><br />
-      Fang Jiarui, Fu Haohuan, Yang Guangwen, Hsieh Cho-Jui,
+      Jiarui Fang, Haohuan Fu, Guangwen Yang, Cho-Jui Hsieh,
       Journal of Parallel and Distributed Computing 133 (JPDC), 30-39
       <a href="https://arxiv.org/pdf/1808.04357.pdf">[PDF]</a>
     </p>
@@ -44,7 +44,7 @@ title: Jiarui Fang - publications
     </p>
     <p class="media-heading">
       <strong><i>swCaffe: a Parallel Framework for Accelerating Deep Learning Applications on Sunway TaihuLight</i></strong><br />
-      Jiarui Fang*, and Li, Liandeng* and Fu, Haohuan and Jiang, Jinlei and Zhao, Wenlai and He, Conghui and You, Xin and Yang, Guangwen. (* equal contribution), 
+      Jiarui Fang*, and Li, Liandeng* and Haohuan Fu , Jinlei Jiang, Wenlai Zhao, Conghui He, Xin You, Guangwen Yang. (* equal contribution), 
       IEEE Cluster (Cluster 2018), Belfast, UK, 2018.<br />
       <a href="https://arxiv.org/abs/1903.06934">[PDF]</a>
       <a href="https://github.com/feifeibear/SWCaffe">[Software]</a>
@@ -52,7 +52,7 @@ title: Jiarui Fang - publications
     </p>
     <p class="media-heading">
       <strong><i>swDNN: A Library for Accelerating Deep Learning Applications on Sunway TaihuLight Supercomputer</i></strong><br />
-      Fang, Jiarui and Fu, Haohuan and Zhao, Wenlai and Chen, Bingwei and Zheng, Weijie and Yang, Guangwen, 
+      Jiarui Fang and Haohuan Fu and Wenlai Zhao , Bingwei Chen, Weijie Zheng,  Guangwen, Yang.
       31st IEEE International Parallel & Distributed Processing Symposium (IPDPS 2017)<br />
       <a href="assets/pdf/swdnn-ipdps-2017.pdf">[PDF]</a>
       <a href="assets/pdf/swDNN-IPDPS-final-ppt.pdf">[PPT]</a>
