--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Jiarui Fang
 <div class="rightphoto"><img src="assets/img/fangjiaruiv3.jpeg" alt="photo" width="200px" /></div>
 <div class="leftpad">
 <h3>Jiarui Fang (方佳瑞)</h3>
-<h5><a href="mailto:fang_jiarui@163.com">fang_jiarui AT 163 dot com</a></h5>
+<h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>I am currently a senior engineer at Wechat AI, Tencent in Beijing. 
   My work is focused on boosting efficiency of online and offline NLP tasks with cutting-edge parallel computing solutions.
   I also took part in development of some basic modules in the WeChat App, including the WeChat Input Method and the WeChat Translation System.
