add book reviewer for solories
增加索拉里斯星读后感

--- a/assets/blogs/book-201704-BML.html
+++ b/assets/blogs/book-201704-BML.html
@@ -3,7 +3,7 @@ layout: post
 title: Jiarui Fang
 ---
 <h2>
-漏舟清歌,焚屋痛饮
+白门柳
 </h2>
 <p>
  白门柳分三本，分别描写北京城破前，南明留都朝廷和清军入主江南三个阶段江南士大夫的生活面貌。刘斯奋通过勾勒这些士大夫的个人生活来侧面呈现明亡之际这段历史。可谓以人写史，波澜壮阔。
