--- a/blogs_index.html
+++ b/blogs_index.html
@@ -38,6 +38,10 @@ title: Jiarui Fang - publications
 <h5>读书</h5>
 <ul>
 <li><p>
+  2021年10月
+  <a href="./assets/blogs/2021-10-04-solories.html">[索拉里斯星]</a>
+</p></li>
+<li><p>
   2017年7月
   <a href="./assets/blogs/2017-07-09-gyqy.html">[国有企业现状浅析]</a>
 </p></li>
