Add book about IBM
增加书评，谁说大象不能跳舞

--- a/blogs_index.html
+++ b/blogs_index.html
@@ -42,6 +42,10 @@ title: Jiarui Fang - publications
   <a href="./assets/blogs/2021-10-04-solories.html">[索拉里斯星]</a>
 </p></li>
 <li><p>
+  2021年10月
+  <a href="./assets/blogs/2020-04-29-IBM.html">[谁说大象不能跳舞]</a>
+</p></li>
+<li><p>
   2017年7月
   <a href="./assets/blogs/2017-07-09-gyqy.html">[国有企业现状浅析]</a>
 </p></li>
