add new file review
增加日元王子影评。

--- a/blogs_index.html
+++ b/blogs_index.html
@@ -42,7 +42,7 @@ title: Jiarui Fang - publications
   <a href="./assets/blogs/2021-10-04-solories.html">[索拉里斯星]</a>
 </p></li>
 <li><p>
-  2021年10月
+  2020年4月
   <a href="./assets/blogs/2020-04-29-IBM.html">[谁说大象不能跳舞]</a>
 </p></li>
 <li><p>
@@ -67,10 +67,17 @@ title: Jiarui Fang - publications
 <h5>观影</h5>
 <ul>
 <li><p>
+  2020年5月
+  <a href="./assets/blogs/2020-05-09-日元王子.html">[纪录片：日元王子]</a>
+</p></li>
+</ul>
+<ul>
+<li><p>
   2017年7月
   <a href="./assets/blogs/2017-07-09-sjbbb.html">[摔跤吧！爸爸]</a>
 </p></li>
 </ul>
+
 
 <h5>生活</h5>
 <ul>
