--- a/assets/blogs/2020-05-09-日元王子.html
+++ b/assets/blogs/2020-05-09-日元王子.html
@@ -53,3 +53,5 @@ title: Jiarui Fang
 <p>
 不知道大家有没有注意到一个现象，日本90年代初期经济崩溃和苏联解体的时间高度重合，美国在政治和经济上两大竞争对手一下子都轰然倒塌。两个国家的当权派中都出现了迷信自由化经济主张的要员，这是阴谋还是巧合呢？感兴趣的读者可以深入研究。
 </p>
+
+2020年5月9日于北京
