--- a/blogs_index.html
+++ b/blogs_index.html
@@ -6,6 +6,14 @@ title: Jiarui Fang - publications
 <h3>独知斋文集</h3>
 独知斋，是我在太湖畔居住公寓一间房。书斋名为“独知斋”，是取“君子慎独”和“知耻后勇”之意。独居幽室，长有所思。只言片语，多有谬误，望读者海涵。
 
+<h5>思想</h5>
+<ul>
+<li><p>
+  2020年5月
+  <a href="./assets/blogs/2020-06-26-信息传播的经济学原理.html">[信息传播的经济学原理]</a>
+</p></li>
+</ul>
+
 <h5>游记</h5>
 <ul>
 <li><p>
@@ -70,8 +78,6 @@ title: Jiarui Fang - publications
   2020年5月
   <a href="./assets/blogs/2020-05-09-日元王子.html">[纪录片：日元王子]</a>
 </p></li>
-</ul>
-<ul>
 <li><p>
   2017年7月
   <a href="./assets/blogs/2017-07-09-sjbbb.html">[摔跤吧！爸爸]</a>
