--- a/blogs_index.html
+++ b/blogs_index.html
@@ -10,7 +10,7 @@ title: Jiarui Fang - publications
 <ul>
 <li><p>
   2020年5月
-  <a href="./assets/blogs/2020-06-26-信息传播的经济学原理.html">[信息传播的经济学原理]</a>
+  <a href="./assets/blogs/2020-06-26-信息传播的经济学原理.md">[信息传播的经济学原理]</a>
 </p></li>
 </ul>
 
