--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>I am currently a senior engineer at Wechat AI, Tencent in Beijing. 
-  My work is focused on boosting efficiency of online and offline NLP tasks with cutting-edge parallel computing solutions.
-  I also took part in development of some basic modules in the WeChat App, including the WeChat Input Method and the WeChat Translation System.
+  My work is focused on boosting efficiency of online and offline NLP tasks with innovative parallel computing solutions.
+  I also took part in development of some basic modules in the WeChat App, including the WeChat Input Method Engine and the WeChat Translation System.
   I am the author of <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU.
 </p>
 <p>
@@ -24,7 +24,7 @@ title: Jiarui Fang
   I enjoy sports. 
   My hobbies include jogging, football, swimming, and table tennis. 
   I am a billiards fan and I won the bronze medal in the WXG Beijing League 2020. 
-  I am also the organizer of a table football league in my office building.
+  I was a organizer of a table football league in my office building.
 </p>
 </div>
 </div>
