--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Jiarui Fang
 <p>I am currently a senior engineer at Wechat AI, Tencent in Beijing. 
   My work is focused on boosting efficiency of online and offline NLP tasks with innovative parallel computing solutions.
   I also took part in development of some basic modules in the WeChat App, including the WeChat Input Method Engine and the WeChat Translation System.
-  I am the author of <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU.
+  I initialized and authored some open-sourced softwares, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU, <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models.
 </p>
 <p>
   I received a Ph.D. in Computer Science from Tsinghua University at 2019.
@@ -24,7 +24,7 @@ title: Jiarui Fang
   I enjoy sports. 
   My hobbies include jogging, football, swimming, and table tennis. 
   I am a billiards fan and I won the bronze medal in the WXG Beijing League 2020. 
-  I was a organizer of a table football league in my office building.
+  I was a organizer of a table football league in my office building at 2020.
 </p>
 </div>
 </div>
