--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>I am currently a senior engineer at Wechat AI, Tencent in Beijing. 
-  My work is focused on boosting efficiency of online and offline NLP tasks with innovative parallel computing techniques.
-  I also took part in development of some basic modules in the WeChat App, including the WeChat Input Method Engine and the WeChat Translation System.
-  I initialized and authored some open-sourced softwares, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU, <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models.
+  My work is focused on improving the efficiency of online and offline AI applications with innovative parallel computing techniques.
+  I also took part in the development of some basic modules in the WeChat App, including the WeChat Input Method Engine and the WeChat Translation System.
+  I initialized and authored some open-sourced software, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU, <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models.
 </p>
 <p>
-  I received a Ph.D. in Computer Science from Tsinghua University at 2019.
+  I received a Ph.D. in Computer Science from Tsinghua University in 2019.
   My advisors are Prof. <a href="http://www.cs.tsinghua.edu.cn/publish/csen/4623/2010/20101224195554390212530/20101224195554390212530_.html">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>. 
   My research focused on applying High-Performance Computing (HPC) for scientific applications. 
   The title of <a href="https://fangjiarui.github.io/assets/pdf/fangjiarui_phd_thesis.pdf">my doctoral dissertation</a> is <i>Parallel Deep Learning Training System on Sunway TaihuLight</i>.
   Two wonderful experiences outside campus enriched my Ph.D. study.
   I worked as a research scientist at the National Supercomputing Center in Wuxi from 2016 to 2019.
-  I served as a visiting scholar under supervised of <a href="http://www.stat.ucdavis.edu/~chohsieh/">Cho-Jui Hsieh</a> at the University of California, Davis, from 2018 to 2019.
+  I served as a visiting scholar under the supervision of <a href="http://www.stat.ucdavis.edu/~chohsieh/">Cho-Jui Hsieh</a> at the University of California, Davis, from 2018 to 2019.
 </p>
 <p>
   I enjoy sports. 
   My hobbies include jogging, football, swimming, and table tennis. 
   I am a billiards fan and won the bronze medal in the WXG Beijing League 2020. 
-  I was an organizer of a table football league in my office building at 2020.
+  I was an organizer of a table football league in my office building in 2020.
 </p>
 </div>
 </div>
@@ -36,7 +36,7 @@ title: Jiarui Fang
  *** Software ***
 
 <h3>
-	<a name='software'></a> Software 
+  <a name='software'></a> Software 
 </h3>
 
 {% include software.html %}
@@ -44,7 +44,7 @@ title: Jiarui Fang
  *** Teaching ***
 
 <h3>
-	<a name='teaching'></a> Teaching (GSI)
+  <a name='teaching'></a> Teaching (GSI)
 </h3>
 
 {% include teaching.html %}
