--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -13,6 +13,15 @@ title: Jiarui Fang - publications
   </a> -->
   <div class="media-body">
     <p class="media-heading">
+      <i><strong>PatrickStar: Parallel Training of Pre-trained Models via Chunk-based Memory Management</strong></i><br />
+      Jiarui Fang, Yang Yu, Zilin Zhu, Shenggui Li, Yang You, Jie Zhou
+      Preprint
+      <a href="https://arxiv.org/abs/2108.05818">[PDF]</a>
+      <a href="https://github.com/Tencent/PatrickStar">[Software]</a>
+      <a href="assets/pdf/patrickstar-ppt.pdf">[PDF]</a>
+    </p>
+
+    <p class="media-heading">
       <i><strong>TurboTransformers: An Efficient GPU Serving System For Transformer Models</strong></i><br />
       Jiarui Fang, Yang Yu, Chengduo Zhao, Jie Zhou,
       Proceedings of the 26th ACM SIGPLAN Symposium on Principles and Practice of Parallel (PPoPP 2021), Virtual Event, Republic of Korea
