--- a/pub_highlight.html
+++ b/pub_highlight.html
@@ -14,8 +14,8 @@ title: Jiarui Fang - publications
   <div class="media-body">
     <p class="media-heading">
       <i><strong>PatrickStar: Parallel Training of Pre-trained Models via Chunk-based Memory Management</strong></i><br />
-      Jiarui Fang, Yang Yu, Zilin Zhu, Shenggui Li, Yang You, Jie Zhou
-      Preprint
+      Jiarui Fang, Zilin Zhu, Shenggui Li, Hui Su, Yang Yu, Jie Zhou, Yang You
+      IEEE Transactions on Parallel and Distributed Systems
       <a href="https://arxiv.org/abs/2108.05818">[PDF]</a>
       <a href="https://github.com/Tencent/PatrickStar">[Software]</a>
       <a href="assets/pdf/patrickstar-ppt.pdf">[PDF]</a>
