update index.html with 2022 experience

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@ title: Jiarui Fang
 <div class="leftpad">
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
-<p>I am currently a senior engineer at Wechat AI, Tencent in Beijing. 
-  My work is focused on improving the efficiency of online and offline AI applications with innovative parallel computing techniques.
+<p>
+From Feburary 2022 to March 2023, I was the CTO of a startup company focused on open-sourced AI infrastructures, where I led the project <a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>, a training framework for large language models.
+</p>
+<p>Before 2022, I was a senior engineer at Wechat AI, Tencent in Beijing. 
+  My work was focused on improving the efficiency of online and offline AI applications with innovative parallel computing techniques.
   I also took part in the development of some basic modules in the WeChat App, including the WeChat Input Method Engine and the WeChat Translation System.
   I initialized and authored some open-sourced software, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU, <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models.
 </p>
@@ -17,8 +20,6 @@ title: Jiarui Fang
   My advisors are Prof. <a href="http://www.cs.tsinghua.edu.cn/publish/csen/4623/2010/20101224195554390212530/20101224195554390212530_.html">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>. 
   My research focused on applying High-Performance Computing (HPC) for scientific applications. 
   The title of <a href="https://fangjiarui.github.io/assets/pdf/fangjiarui_phd_thesis.pdf">my doctoral dissertation</a> is <i>Parallel Deep Learning Training System on Sunway TaihuLight</i>.
-  Two wonderful experiences outside campus enriched my Ph.D. study.
-  I worked as a research scientist at the National Supercomputing Center in Wuxi from 2016 to 2019.
   I served as a visiting scholar under the supervision of <a href="http://www.stat.ucdavis.edu/~chohsieh/">Cho-Jui Hsieh</a> at the University of California, Davis, from 2018 to 2019.
 </p>
 <p>
