update new position

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-From Feburary 2022 to March 2023, I was the CTO of a startup company focused on open-sourced AI infrastructures, where I led the project <a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>, a training framework for large language models.
+  I am currently a principle software engineer at Tencent, the leader of a team for developing Large Lauguague/Vision(LLM/LVM) Models training and inference software on heterogeneous hardware platforms, including GPU and NPUs.
 </p>
-<p>Before 2022, I was a senior engineer at Wechat AI, Tencent in Beijing. 
+<p>
+  Over the span of a year and a half, I have had two startup experiences. I was one of the technical partner r at LightYearAI, serving as the first technical member upon the company's inception. I led a team of 20, overseeing Data Curation for the pre-training of large language models. The company was acquired by Meituan Inc just three months after its establishment.
+  Prior to that, I was the CTO of a startup company dedicated to open-source AI infrastructures, where I led the project a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>,, a training framework for large language models.
+</p>
+<p>
+  Before that, I was a senior engineer at Wechat AI, Tencent. 
   My work was focused on improving the efficiency of online and offline AI applications with innovative parallel computing techniques.
   I also took part in the development of some basic modules in the WeChat App, including the WeChat Input Method Engine and the WeChat Translation System.
   I initialized and authored some open-sourced software, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU, <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models.
