--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Jiarui Fang
 </p>
 <p>
   Over the span of a year and a half, I have had two startup experiences. I was one of the technical partner r at LightYearAI, serving as the first technical member upon the company's inception. I led a team of 20, overseeing Data Curation for the pre-training of large language models. The company was acquired by Meituan Inc just three months after its establishment.
-  Prior to that, I was the CTO of a startup company dedicated to open-source AI infrastructures, where I led the project a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>,, a training framework for large language models.
+  Prior to that, I was the CTO of a startup company dedicated to open-source AI infrastructures, where I led the project <a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>, a training framework for large language models.
 </p>
 <p>
   Before that, I was a senior engineer at Wechat AI, Tencent. 
