--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-  I am currently a principle software engineer at Tencent, the leader of a team for developing Large Lauguague/Vision(LLM/LVM) Models training and inference software on heterogeneous hardware platforms, including GPU and NPUs.
+  I am currently a principal software engineer at Tencent, the leader of a team for developing Large Lauguague/Vision(LLM/LVM) Models training and inference software on heterogeneous hardware platforms, including GPU and NPUs.
 </p>
 <p>
   Over the span of a year and a half, I have had two startup experiences. I was one of the technical partner r at LightYearAI, serving as the first technical member upon the company's inception. I led a team of 20, overseeing Data Curation for the pre-training of large language models. The company was acquired by Meituan Inc just three months after its establishment.
