--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ title: Jiarui Fang
   Before that, I was a senior engineer at Wechat AI, Tencent. 
   My work was focused on improving the efficiency of online and offline AI applications with innovative parallel computing techniques.
   I also took part in the development of some basic modules in the WeChat App, including the <a href="https://z.weixin.qq.com/">WeChat Input Method Engine</a> and the WeChat Translation System.
-  At Wechat AI, I initialized two popular open-sourced software, e.g. TurboTransformers</a>, a fast runtime for transformer inference on CPU and GPU, 
-  <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models.
+  At Wechat AI, I initialized two popular open-sourced software, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference beating FasterTransformers at that time, 
+  <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models featuring the best CPU-GPU offloading method.
   In 2021, I was honored with the company's highest-valued individual award for my outstanding contributions to open-source collaboration.
   I later learned that PatrickStar played a significant role in training the <a href="https://hunyuan.tencent.com/">Tencent Hunyuan LLM</a> in 2023. 
 </p>
