--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-  I am currently a principal software engineer at Tencent, the leader of a team for developing distributed software for Large Lauguague/Diffusion Models (LLMs/DiTs) on heterogeneous hardware platforms, including NVIDIA GPU, Intel Gaudi and domestic NPUs.
+  I am currently a principal software engineer at Tencent, the director of a team for software for Large Lauguague/Diffusion Models (LLMs/DiTs) on heterogeneous hardware platforms, including NVIDIA GPU, Intel Gaudi and domestic NPUs.
   I initialized the open-sourced project <a href="https://github.com/xdit-project/xDiT">xDiT</a>, A Scalable Inference Engine for Diffusion Transformers (DiTs) on multi-GPUs.
 </p>
 <p>
-  Over the span of a year and a half, I have had two startup experiences. 
+  During an 20 months period from 2022 to 2023, I gained valuable experience with two startups.
   I was one of the technical partners at LightYearAI, serving as the first technical member upon the company's inception. 
   I led a team of 20+ members, with the responsibility of data curation for the pre-training of large language models.
   The company was acquired by Meituan Inc just three months after its establishment.
-  Prior to that, I was the CTO of a startup company dedicated to open-source AI infrastructures, where I led the project <a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>, a training framework for large language models.
+  Prior to that, I was the CTO of a LMSys startup company dedicated to open-source AI infrastructures, where I led the project <a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>, a training framework for large language models.
 </p>
 <p>
   Before that, I was a senior engineer at Wechat AI, Tencent. 
   My work was focused on improving the efficiency of online and offline AI applications with innovative parallel computing techniques.
   I also took part in the development of some basic modules in the WeChat App, including the <a href="https://z.weixin.qq.com/">WeChat Input Method Engine</a> and the WeChat Translation System.
   At Wechat AI, I initialized two popular open-sourced software, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference beating FasterTransformers at that time, 
-  <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, a parallel training framework for large language models featuring the best CPU-GPU offloading method.
-  In 2021, I was honored with the company's highest-valued individual award for my outstanding contributions to open-source collaboration.
-  I later learned that PatrickStar played a significant role in training the <a href="https://hunyuan.tencent.com/">Tencent Hunyuan LLM</a> in 2023. 
+  <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, an efficient parallel training framework for large language models that implements advanced CPU-GPU offloading techniques.
+  I'm proud that PatrickStar has become a core component of ColossalAI and has contributed to the training of the <a href="https://hunyuan.tencent.com/">Tencent Hunyuan LLM</a>. It's also been adopted as a key feature in <a href="https://github.com/alibaba/Pai-Megatron-Patch">Pai-Megatron-Patch</a> by Alibaba Cloud.
+  In 2021, I was deeply honored to receive the company's highest individual award in recognition of my contributions to open-source collaboration.
 </p>
+
 <p>
   I received a Ph.D. in Computer Science from Tsinghua University in 2019.
   My advisors are Prof. <a href="https://www.cs.tsinghua.edu.cn/info/1107/3507.htm">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>. 
